k8s/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: task-service
spec:
  selector:
    app: task-service
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
