k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: task-service
                port:
                  number: 80 # Matches your backend-service port
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80 # Matches your frontend-service port
